--- a/Expense Trackeer Front End/Front-End/expensePage/expense.html
+++ b/Expense Trackeer Front End/Front-End/expensePage/expense.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="expense.css">
 </head>
 <body>
-    <a href="./expensesPage.html"><button id="expenses">Click to open Expenses Page</button> </a>
+    <a href="./expensesPage.html?page=1"><button id="expenses">Click to open Expenses Page</button> </a>
     <button id="button1" >Dark Mode</button>
     
     <div id="formBody">
