--- a/Group Chat App Front End/ResetPassword/reset.html
+++ b/Group Chat App Front End/ResetPassword/reset.html
@@ -11,11 +11,11 @@
     <form id="form">
         <p id="err" style="color:red"></p>
          <label for="newEmail" >Enter New Password</label>
-        <input type="text" id="newEmailPassword" name="newEmail">
+        <input type="password" id="newEmailPassword" name="newEmail">
         <br>
         <br>
         <label for="reNewEmail">Re-Enter New Password</label>
-        <input type="text" id="reNewEmailPassword" name="reNewEmail">
+        <input type="password" id="reNewEmailPassword" name="reNewEmail">
         
         <input type="submit" id="submit">
     </form>
