--- a/Group Chat App Front End/ChatAppHome/chatAppHome.html
+++ b/Group Chat App Front End/ChatAppHome/chatAppHome.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     
-
+    <button id="logout">Logout</button>
     <p id="chatD">Chat App</p>
+
     <a href="../creatingGroup/createGroup.html" style="color:white" ><button id="createFunctions"> Create Functions </button></a>
     <div id="userGROUPS" ></div>
     
